<resources>
    <string name="app_name">Weather App</string>'
    <string name="weather">Tap refresh to get weather!</string>
    <string name="button_to_forecast">Forecast</string>
    <string name="button_to_weather">Weather Now</string>
    <string name="temperature_string">Temperature</string>
    <string name="wind_string">Wind</string>
    <string name="weather_string">Weather</string>
    <string name="refresh">Refresh</string>
    <string name="to_tuni_fi">To tuni.fi</string>
    <string name="add_alarm">Add Alarm</string>
    <string name="open_maps">Open Maps</string>
    <string name="snow_fc_text">Snow</string>
    <string name="cloudy_fc_txt">Cloudy</string>
    <string name="tomorrow_temp_val" translatable="false">-5° C</string>
    <string name="sat_temp_val" translatable="false">-7° C</string>
    <string name="tomorrow_text">Tomorrow</string>
    <string name="saturday_text">Saturday</string>
    <string name="today_text">Today</string>
</resources>