<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/tempValID"
        android:layout_width="159dp"
        android:layout_height="78dp"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/refreshId"
        app:layout_constraintEnd_toStartOf="@id/weatherValID"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weatherIconID" />


    <Button
        android:id="@+id/toForecastID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/flamingo"
        android:onClick="moveToForecast"
        android:text="@string/button_to_forecast"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/mapID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.719"
        app:layout_constraintStart_toEndOf="@+id/refreshId"
        app:layout_constraintTop_toBottomOf="@+id/weatherValID" />

    <TextView
        android:id="@+id/dateID"
        android:layout_width="312dp"
        android:layout_height="92dp"
        android:text="@string/weather"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/weatherIconID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/weatherValID"
        android:layout_width="137dp"
        android:layout_height="79dp"
        android:gravity="center"
        android:text=""
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/toForecastID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tempValID"
        app:layout_constraintTop_toBottomOf="@+id/weatherIconID"
        app:layout_constraintVertical_bias="0.75" />


    <Button
        android:id="@+id/tuniID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="openTuni"
        android:textColor="@color/white"
        android:text="@string/to_tuni_fi"
        android:backgroundTint="#ef9f76"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/calendarID"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/refreshId" />

    <Button
        android:id="@+id/calendarID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="addAlarm"
        android:backgroundTint="#ef9f76"
        android:textColor="@color/white"
        android:text="@string/add_alarm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/mapID"
        app:layout_constraintStart_toEndOf="@+id/tuniID"
        app:layout_constraintTop_toBottomOf="@+id/toForecastID" />

    <Button
        android:id="@+id/mapID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="openMaps"
        android:textColor="@color/white"
        android:text="@string/open_maps"
        android:backgroundTint="#ef9f76"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/calendarID"
        app:layout_constraintTop_toBottomOf="@+id/toForecastID" />

    <Button
        android:id="@+id/refreshId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/flamingo"
        android:onClick="fetchWeatherData"
        android:text="@string/refresh"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/tuniID"
        app:layout_constraintEnd_toStartOf="@+id/toForecastID"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tempValID" />

    <ImageView
        android:id="@+id/weatherIconID"
        android:layout_width="269dp"
        android:layout_height="195dp"
        app:layout_constraintBottom_toTopOf="@id/tempValID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dateID"/>

</androidx.constraintlayout.widget.ConstraintLayout>